--- a/nobody-auth/src/main/resources/application.yml
+++ b/nobody-auth/src/main/resources/application.yml
@@ -2,13 +2,17 @@ spring:
   application:
     name: nobody_auth
   datasource:
-    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/nobody?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     username: root
-    password: Weshare2016@!
+    password: 520..xj/
   security:
     user:
       name: nobody
       password: nobody
+
+  redis:
+    host: 127.0.0.1
+    port: 6379
 server:
   port: 8002
 mybatis-plus:
