--- a/nobody-system/src/main/resources/application.yml
+++ b/nobody-system/src/main/resources/application.yml
@@ -5,10 +5,10 @@ spring:
     name: nobody_system
 
   datasource:
-    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/nobody?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     username: root
-    password: 123456
-    
+    password: 520..xj/
+
 
 mybatis-plus:
   # \u641C\u7D22\u6307\u5B9A\u5305\u522B\u540D
