--- a/nobody-auth/src/main/resources/application.yml
+++ b/nobody-auth/src/main/resources/application.yml
@@ -5,8 +5,10 @@ spring:
     url: jdbc:mysql://localhost:3306/nobody?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     username: root
     password: 520..xj/
-
-
+  security:
+    user:
+      name: nobody
+      password: nobody
   redis:
     host: 127.0.0.1
     port: 6379
@@ -16,6 +18,12 @@ server:
     key-store: classpath:nobody.p12
     key-alias: tomcathttps
     key-store-password: 123456
+
+  servlet:
+    encoding:
+      charset: UTF-8
+      force: true
+      enabled: true
 mybatis-plus:
   type-aliases-package: com.xj.nobody.**.entity,com.xj.nobody.**.domain
   mapper-locations: classpath:mapper/**/**Mapper.xml
