--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.4</version>
+        <version>2.7.0</version>
         <relativePath/>
     </parent>
     <groupId>com.xj.nobody</groupId>
@@ -17,7 +17,8 @@
         <module>nobody-system</module>
         <module>nobody-commons</module>
         <module>nobody-auth</module>
-        <module>nobody-study</module>
+        <module>nobody-mbg</module>
+        <!--<module>nobody-study</module>-->
     </modules>
     <properties>
         <app.version>1.0-SNAPSHOT</app.version>
@@ -27,7 +28,9 @@
         <druid.version>1.2.6</druid.version>
         <commons.io.version>2.10.0</commons.io.version>
         <mybatis.plus.start>3.5.3.1</mybatis.plus.start>
-        <mysql.connector>8.0.22</mysql.connector>
+        <mysql.connector>8.0.29</mysql.connector>
+        <mybatis-generator.version>1.4.1</mybatis-generator.version>
+        <pagehelper-starter.version>1.4.2</pagehelper-starter.version>
     </properties>
 
 
@@ -47,6 +50,16 @@
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${commons.io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>${pagehelper-starter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-core</artifactId>
+                <version>${mybatis-generator.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
