--- a/nobody-auth/src/main/resources/application.yml
+++ b/nobody-auth/src/main/resources/application.yml
@@ -1,37 +1,8 @@
+server:
+  port: 9000
 spring:
   application:
-    name: nobody_auth
-  datasource:
-    url: jdbc:mysql://localhost:3306/nobody?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
-    username: root
-    password: 520..xj/
-  security:
-    user:
-      name: nobody
-      password: nobody
-  redis:
-    host: 127.0.0.1
-    port: 6379
-#server:
-#  port: 8443
-#  ssl:
-#    key-store: classpath:nobody.p12
-#    key-alias: tomcathttps
-#    key-store-password: 123456
-
-  servlet:
-    encoding:
-      charset: UTF-8
-      force: true
-      enabled: true
-mybatis-plus:
-  type-aliases-package: com.xj.nobody.**.entity,com.xj.nobody.**.domain
-  mapper-locations: classpath:mapper/**/**Mapper.xml
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-
-logging:
-  level:
-    web: DEBUG
-    com.xj.auth: debug
-    org.springframework: warn
+    name: nobody-auth
+  cloud:
+    nacos:
+      server-addr: 127.0.0.1:8848
