--- a/pom.xml
+++ b/pom.xml
@@ -14,23 +14,24 @@
     <name>nobody-parent</name>
     <packaging>pom</packaging>
     <modules>
-        <module>nobody-system</module>
         <module>nobody-commons</module>
         <module>nobody-auth</module>
-        <module>nobody-mbg</module>
-        <!--<module>nobody-study</module>-->
+        <module>nobody-admin</module>
     </modules>
     <properties>
-        <app.version>1.0-SNAPSHOT</app.version>
-        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <app.version>1.0-SNAPSHOT</app.version>
+        <java.version>1.8</java.version>
         <druid.version>1.2.6</druid.version>
         <commons.io.version>2.10.0</commons.io.version>
         <mybatis.plus.start>3.5.3.1</mybatis.plus.start>
         <mysql.connector>8.0.29</mysql.connector>
         <mybatis-generator.version>1.4.1</mybatis-generator.version>
         <pagehelper-starter.version>1.4.2</pagehelper-starter.version>
+        <spring-cloud-alibaba.version>2021.0.1.0</spring-cloud-alibaba.version>
+        <nimbus-jose-jwt.version>9.23</nimbus-jose-jwt.version>
+        <spring-cloud-starter-oauth2.version>2.2.5.RELEASE</spring-cloud-starter-oauth2.version>
     </properties>
 
 
@@ -47,24 +48,26 @@
                 <version>${druid.version}</version>
             </dependency>
             <dependency>
-                <groupId>commons-io</groupId>
-                <artifactId>commons-io</artifactId>
-                <version>${commons.io.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>com.github.pagehelper</groupId>
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
                 <version>${pagehelper-starter.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-core</artifactId>
-                <version>${mybatis-generator.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis.plus.start}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring-cloud-alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.nimbusds</groupId>
+                <artifactId>nimbus-jose-jwt</artifactId>
+                <version>${nimbus-jose-jwt.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
