--- a/nobody-admin/src/main/resources/application.yml
+++ b/nobody-admin/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
   application:
     name: nobody-admin
   datasource:
-    url: jdbc:mysql://120.79.133.173:3307/demo01?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/demo01?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     username: root
-    password: Weshare2016@!
+    password: root
 mybatis-plus:
   mapper-locations: classpath*:mapper/**/*.xml
   type-aliases-package: com.weshare.nobody.domain,com.weshare.nobody.entity
