--- a/nobody-admin/src/main/resources/application.yml
+++ b/nobody-admin/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
     url: jdbc:mysql://localhost:3306/demo01?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     username: root
     password: root
+  redis:
+    host: localhost
+    port: 6378
+    timeout: 3000
 mybatis-plus:
   mapper-locations: classpath*:mapper/**/*.xml
   type-aliases-package: com.weshare.nobody.domain,com.weshare.nobody.entity
