--- a/nobody-admin/pom.xml
+++ b/nobody-admin/pom.xml
@@ -30,6 +30,10 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.xj.nobody</groupId>
             <artifactId>nobody-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
