--- a/nobody-admin/pom.xml
+++ b/nobody-admin/pom.xml
@@ -38,5 +38,9 @@
             <artifactId>nobody-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+        </dependency>
     </dependencies>
 </project>
