--- a/nobody-admin/src/main/resources/application.yml
+++ b/nobody-admin/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/nobody?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     username: root
-    password: root
+    password: 123456
   redis:
     host: localhost
     port: 6379
